--- a/classes/production/com.yourname.modid.InfiniteToolsV1/assets/infinitetools/lang/en_us.lang
+++ b/classes/production/com.yourname.modid.InfiniteToolsV1/assets/infinitetools/lang/en_us.lang
@@ -1,5 +1,10 @@
 # Items
 item.ingot_scandium.name=Scandium Ingot
-
+item.ingot_enrichedscandium.name=Enriched Scandium
+item.scandium_sword.name=Scandium Sword
 # Blocks
 tile.ore_scandium.name=Scandium Ore
+
+
+# Creative tab
+itemGroup.infinitetools=Infinite Tools
