--- a/classes/production/com.yourname.modid.InfiniteToolsV1/assets/infinitetools/lang/en_us.lang
+++ b/classes/production/com.yourname.modid.InfiniteToolsV1/assets/infinitetools/lang/en_us.lang
@@ -3,6 +3,7 @@ item.ingot_scandium.name=Scandium Ingot
 item.ingot_enrichedscandium.name=Enriched Scandium
 item.scandium_sword.name=Scandium Sword
 item.scandium_pickaxe.name=Scandium Pickaxe
+item.scandium_shovel.name=Scandium Shovel
 
 
 
